fixed overflow

--- a/news-homepage-main/styles.css
+++ b/news-homepage-main/styles.css
@@ -40,7 +40,7 @@
 }
 @media (min-width: 65em) {
   :root {
-    --fs-500: clamp(0.92rem, 0.93vw + 0.1rem, 0.96rem);
+    --fs-500: clamp(0.85rem, 0.85vw + 0.1rem, 0.88rem);
     --paragraph: clamp(0.83rem, 0.85vw + 0.1rem, 0.86rem);
   }
 }
@@ -189,7 +189,7 @@ a:focus-visible {
 
 body {
   font-family: "Inter", sans-serif;
-  font-weight: light;
+  font-weight: 300;
   overflow-x: hidden;
   min-height: 100vh;
   position: relative;
@@ -329,7 +329,7 @@ body {
   outline: none;
   border: none;
   background-color: var(--clr-neutral);
-  padding: calc(var(--spacing-1) * 2) calc(var(--spacing-1) * 4);
+  padding: calc(var(--spacing-1) * 2.12) calc(var(--spacing-1) * 4);
   text-transform: uppercase;
   color: var(--clr-white);
   font: inherit;
@@ -528,6 +528,15 @@ section.animate {
     transform: translateY(0px);
   }
 }
+
+@keyframes slideLeft {
+  0% {
+    transform: translateY(30px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 @media (min-width: 65em) {
   @keyframes slideIn {
     0% {
@@ -537,14 +546,14 @@ section.animate {
       transform: translateX(0px);
     }
   }
-}
 
-@keyframes slideLeft {
-  0% {
-    transform: translateX(45px);
-  }
-  100% {
-    transform: translateX(0px);
+  @keyframes slideLeft {
+    0% {
+      transform: translateX(45px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
   }
 }
 
